ALA article x overflow fixed

--- a/code/framework/templates/article/__grid/article__grid.scss
+++ b/code/framework/templates/article/__grid/article__grid.scss
@@ -6,7 +6,13 @@
   min-height: 100vh;
   justify-content: space-around;
 
+  // For the blockquote skew
+  overflow-x: hidden;
+
   .article {
+    // For the blockquote skew
+    overflow-x: hidden;
+
     // reset padding, add margin instead
     @include landscape {
       margin: 5vh 10vw;
