--- a/code/framework/templates/default/__grid/default__grid.scss
+++ b/code/framework/templates/default/__grid/default__grid.scss
@@ -1,7 +1,4 @@
 @mixin default__grid {
-  // For the blockquote skew
-  overflow-x: hidden;
-
   // For the intro
   position: relative;
   .articles,
